# homelab-directory

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
dashboard/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/management/commands/: seed_services.py
dashboard/migrations/: 0001_initial.py  0002_alter_service_options_service_category.py
dashboard/templates/dashboard/: base.html  index.html
homelab_directory/: asgi.py  settings.py  urls.py  wsgi.py
